@@ -126,6 +126,80 @@ void add_to_alternate_filename(alt_filename_t & alternate_filename,
 	}
 }
 
+/**
+ * @param candidate  the condidate filename
+ * @param image  the image name to match
+ *
+ * helper for check_module_name - return true if candidate match image name
+ */
+static bool match_module_name(string const & candidate, string const & image)
+{
+	if (candidate.length() != image.length()) {
+		return false;
+	}
+
+	for (string::size_type i = 0 ; i < image.length() ; ++i) {
+		if (image[i] == candidate[i])
+			continue;
+		if (image[i] == '_' && (candidate[i] == ',' || candidate[i] == '-'))
+			continue;
+		return false;
+	}
+
+	return true;
+}
+
+/**
+ * @param alt_filename container where all candidate filename are stored
+ * @param image_name binary image name
+ * @param samples_filename samples filename
+ *
+ * helper for check_image_name either return image name on success or an empty
+ * string, output also a warning if we failt to retrieve the image name. All
+ * this handling is special for 2.5/2.6 module where daemon are no way to know
+ * full path name of module
+ */
+static string check_module_name(alt_filename_t const & alt_filename,
+				string const & image_name,
+				string const & samples_filename)
+{
+	vector<string> result;
+	typedef alt_filename_t::const_iterator it_t;
+
+	for (it_t it = alt_filename.begin(); it != alt_filename.end(); ++it) {
+		string const & candidate = it->first;
+		if (match_module_name(candidate, image_name)) {
+			result.push_back(it->second + "/" + candidate);
+		}
+	}
+
+	if (result.empty()) {
+		static bool first_warn = true;
+		if (first_warn) {
+			cerr << "I can't locate some binary image file, all\n"
+			     << "of this file(s) will be ignored in statistics"
+			     << endl
+			     << "Have you provided the right -p option ?"
+			     << endl;
+			first_warn = false;
+		}
+
+		cerr << "warning: can't locate image file for samples files : "
+		     << samples_filename << endl;
+
+		return string();
+	}
+
+	if (result.size() > 1) {
+		cerr << "the image name for samples files : "
+		     << samples_filename << " is ambiguous\n"
+		     << "so this file file will be ignored" << endl;
+		return string();
+	}
+
+	return result[0];
+}
+
 
 string check_image_name(alt_filename_t const & alternate_filename,
 			string const & image_name,
@@ -151,27 +225,11 @@ string check_image_name(alt_filename_t const & alternate_filename,
 	pair<it_t, it_t> p_it =
 		alternate_filename.equal_range(basename(image_name));
 
-	// Special handling for 2.5, retry with .ko suffix
+	// Special handling for 2.5/2.6 module
 	if (p_it.first == p_it.second) {
-		p_it = alternate_filename.equal_range(basename(image_name + ".ko"));
-	}
-
-	if (p_it.first == p_it.second) {
-
-		static bool first_warn = true;
-		if (first_warn) {
-			cerr << "I can't locate some binary image file, all\n"
-			     << "of this file(s) will be ignored in statistics"
-			     << endl
-			     << "Have you provided the right -p option ?"
-			     << endl;
-			first_warn = false;
-		}
-
-		cerr << "warning: can't locate image file for samples files : "
-		     << samples_filename << endl;
-
-		return string();
+		return check_module_name(alternate_filename,
+					 basename(image_name) + ".ko",
+					 samples_filename);
 	}
 
 	if (distance(p_it.first, p_it.second) != 1) {
